--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -1,5 +1,4 @@
 # ./.github/workflows/dockerimage.yml
-
 name: Docker Image CI
 
 on:
@@ -9,8 +8,9 @@ types: [published]
 jobs:
 build:
 runs-on: ubuntu-latest
-
             steps:
+            - name: Lint Action
+              uses: samuelmeuli/lint-action@v1.4.0
             - uses: actions/checkout@v1
             - name: Login to DockerHub Registry
               run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
